2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/DeclarationViewWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Track
	  API.
	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindow.cs:
	  Add transparency behaviour to parameter tooltip.
	* MonoDevelop.Projects.Gui.Completion/WindowTransparencyDecorator.cs:
	  De-uglify API.

2008-04-10  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/WindowTransparencyDecorator.cs:
	  Work around GTK# crasher bug and enable transparency by default.

2008-04-10  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Gui.mdp, Makefile.am: Updated.
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/DeclarationViewWindow.cs: Make
	  completion window semi-transparent when Ctrl key is held down.
	* MonoDevelop.Projects.Gui.Completion/WindowTransparencyDecorator.cs:
	  Decorator class that makes the attached GTK window semi-transparent
	  when the Control key is held down. Set
	  MONODEVELOP_ENABLE_UNSTABLE_TRANSPARENCY to enable it. Requires
	  GTK+ 2.12 and a compositing window manager, but degrades
	  transparently (ha!) if these aren't available.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Use the new mime type extension
	  to register new file types.
	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CombineStartupPanelWidget.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CombineInformationWidget.cs:
	  Updated.

2008-04-01  Aaron Bockover <abockover@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.GeneralProjectOptionsWidget.cs:
	Added a 'use parent directory as namespace' check box under the default
	namespace entry

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/GeneralProjectOptions.cs: